--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ h1 {
   padding: 2em;
   border-radius: 30px;
   width: 100%;
-  max-width: 520px;
+  max-width: 700px;
   margin: 1em;
   margin-top: 100px;
 }
@@ -36,6 +36,12 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.ziplabel {
+  color: white;
+  display: flex;
+
 }
 
 .box {
